<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="fill_parent"
    android:background="@color/bg_color_deep"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/login_linearlayout"
        style="@style/head_image"
        android:layout_width="200dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/item_press_bg"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/user_login_image"
            style="@style/head_image"
            android:layout_marginLeft="20dp"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:contentDescription="@string/none"
            android:focusable="false"
            android:padding="1dp"
            android:scaleType="fitXY" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/item_press_bg"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/title_bar_user_name"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/item_press_bg"
                android:gravity="center"
                android:text="@string/title_bar_user_name"
                android:textSize="@dimen/LargeTextSize" />
            <TextView
                android:id="@+id/title_bar_user_login"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/item_press_bg"
                android:gravity="center"
                android:text="@string/title_bar_user_login"
                android:textColor="@color/black"
                android:textSize="@dimen/LargeTextSize" />
        </LinearLayout>
    </LinearLayout>
    <include
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        layout="@layout/utils_line" >
    </include>
    <LinearLayout
        android:id="@+id/title_bar_serch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_press_bg"
        android:orientation="horizontal" >
        <TextView
            style="@style/text_item"
            android:layout_width="wrap_content"
            android:text="@string/title_bar_serch"
            android:textColor="#c5471c" />
        <ImageView
            style="@style/text_item"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:contentDescription="@string/none"
            android:focusable="false"
            android:src="@drawable/search_icon_n" />
    </LinearLayout>
    <include
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        layout="@layout/utils_line" >
    </include>
    <ScrollView
        android:id="@+id/mlist"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_color_deep" >
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/bg_color_deep"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/title_bar_ind"
                style="@style/text_item"
                android:text="@string/title_bar_index"
                android:textColor="#c5471c" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_logo"
                style="@style/text_item"
                android:text="@string/title_bar_logo"
                android:textColor="#c5471c" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_logo_product"
                style="@style/text_item"
                android:text="@string/title_bar_logo_product"
                android:textColor="#c5471c" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_four_phone"
                style="@style/text_item"
                android:text="@string/title_bar_four_phone"
                android:textColor="#c5471c" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_main"
                style="@style/text_item"
                android:text="@string/title_bar_main"
                android:textColor="#c5471c" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_news"
                style="@style/text_item"
                android:text="@string/title_bar_news"
                android:textColor="#c5471c" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_zhaoshang"
                style="@style/text_item"
                android:text="@string/title_bar_zhaoshang" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_qiugou"
                style="@style/text_item"
                android:text="@string/title_bar_qiugou" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_pinpai"
                style="@style/text_item"
                android:text="@string/title_bar_pinpai" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_wuma"
                style="@style/text_item"
                android:text="@string/title_bar_wuma" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_sanma"
                style="@style/text_item"
                android:text="@string/title_bar_sanma" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_gexing"
                style="@style/text_item"
                android:text="@string/title_bar_gexing" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_waidan"
                style="@style/text_item"
                android:text="@string/title_bar_waidan" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_td"
                style="@style/text_item"
                android:text="@string/title_bar_td" />
            <include
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                layout="@layout/utils_line" >
            </include>
            <TextView
                android:id="@+id/title_bar_zhaopin"
                style="@style/text_item"
                android:text="@string/title_bar_zhaopin" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>